--- a/trunk/plugins/org.chromium.debug/license.html
+++ b/trunk/plugins/org.chromium.debug/license.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <title>Chrome Developer Tools License Agreement</title>
 </head>
 <body>
