Repackage the project source feature. Add a new feature that generates all source features (previously it was done by the originating features).
TBR=pfeldman

Review URL: http://codereview.chromium.org/126130

--- a/features/org.chromium.sdk/license.html
+++ b/features/org.chromium.sdk/license.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <title>Chrome Developer Tools License Agreement</title>
 </head>
 <body>
