Rename visible "Google Chrome" into Chromium
Review URL: http://codereview.chromium.org/146025

--- a/features/org.chromium.debug/license.html
+++ b/features/org.chromium.debug/license.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-  <title>Chrome Developer Tools License Agreement</title>
+  <title>Google Chrome Developer Tools License Agreement</title>
 </head>
 <body>
 <h1>
-Chrome Developer Tools License Agreement
+Google Chrome Developer Tools License Agreement
 </h1>
 <h2>
 Copyright (c) 2009 The Chromium Authors. All rights reserved.
