Add unicode symbols to script source
Review URL: http://codereview.chromium.org/5232007

--- a/trunk/utils/org.chromium.sdk.tests.system/testwebsite/main.html
+++ b/trunk/utils/org.chromium.sdk.tests.system/testwebsite/main.html
@@ -7,6 +7,7 @@
 -->
 
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script type="text/javascript" src="script1.js"></script>
     <title>org.chromium.sdk.tests.system:main.html</title>
   </head>
@@ -29,5 +30,9 @@
      
     <p>
     See also: <a href="http://code.google.com/p/chromedevtools">http://code.google.com/p/chromedevtools</a>
+
+    <div style="color: grey; font-size: 0.8em;">
+    Additional test elements: unicode symbols "хорошо".
+    </div>
   </body>
 </html>
