change string representation on screen-shot

--- a/wiki/ui-mocks-internal/ui_mocks.html
+++ b/wiki/ui-mocks-internal/ui_mocks.html
@@ -442,7 +442,7 @@
   </tr>
   <tr>
     <td style="border: solid thin; padding: 0.4em">
-      <i>[Manager: state=idle, id=24]</i><br>
+      <i>[Manager: state=idle, counter=24]</i><br>
       <div style="height: 3em;"></div>
     </td>
   </tr>
