add launch screenshot

--- a/wiki/ui-mocks-internal/ui_mocks.html
+++ b/wiki/ui-mocks-internal/ui_mocks.html
@@ -481,6 +481,48 @@
   </div>
 </div>
 
+
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+<br>
+
+<table style="border: solid thin; border-collapse: collapse">
+  <tr>
+    <td>
+      <table class="tabs">
+        <td class="tabhead"><b>Debug</b></td>
+        <td  class="tabemptyhead"><div style="width: 4em;"></div></td>
+      </table>
+    </td>
+  </tr>
+  <tr>
+    <td style="border: solid thin; padding: 0;">
+      <table style="padding-bottom: 4em; padding-right: 3em;">
+        <tr>
+          <td>&#x229f;</td><td>chrome 9222 [Chromium JavaScript]</td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <table>
+              <tr>
+                <td>&#x229f;</td><td>Chromium</td>
+              </tr>
+              <tr>
+                <td></td>
+                <td>
+                  <font color="white">&#x229f;</font>JavaScript Thread (Running) : http://mysite.org/main.html
+                </td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
 <br>&nbsp;
 <br>&nbsp;
 <br>&nbsp;
