--- a/wiki/ui-mocks-internal/ui_mocks.html
+++ b/wiki/ui-mocks-internal/ui_mocks.html
@@ -529,7 +529,171 @@
 <br>
 
 
+<h1>Release 0.3.0 </h1>
 
+
+<div class="dialogwindow">
+  <div class="dialogtitle">
+    Debug Configurations
+  </div>
+  <div  style="width: 16em;"></div>
+
+  <div class="windowbody">
+    <div style="width: 32em;"></div>
+    <table style="width: 100%">
+      <tr>
+        <td style="border-right: solid thin; vertical-align: top; padding-right: 0.6em;">
+          <img src="new_con.gif">
+          <img src="copy_edit_co.gif">
+          <img src="rem_co.gif">
+          <li>Chromium JavaScript</li>
+          <div style="display: inline; padding-left: 2em;">chrome 9222 mysite</div>
+          <li>Standalone V8 VM</li>
+          <li>WebKit Protocol</li>
+        </td>
+        <td style="vertical-align: top; padding-left: 0.3em;">
+          <div style="padding-left: 0.2em; padding-top: 0.1em;">
+            <table>
+              <td>Name:</td>
+              <td style="width: 100%">
+              <div style="display: block;" class="inputfield">chrome 9222 mysite&nbsp;</div>
+              </td>
+            </table>
+          </div>
+          <div style="height: 0.5em;"></div>
+          <div>
+            <table class="tabs">
+              <td class="tabhead"><b>Remote</b></td>
+              <td class="tabhead">Source</td>
+              <td class="tabhead">Common</td>
+              <td  class="tabemptyhead"></td>
+            </table>
+          </div>
+          <div style="height: 0.5em;"></div>
+          Connection
+          <div style="padding: 0 10px 0 0.5em;">
+            Host:
+            <div style="display: block; margin-left: 0; width: 100%;" class="inputfield">foo.intranet</div>
+            Port:
+            <div style="display: block; margin-left: 0; width: 100%;" class="inputfield">9222</div>
+            &#x2610;Show debugger network communication console
+          </div>
+          <div style="height: 0.7em;"></div>
+          Breakpoint sync on launch
+          <div style="padding: 0 0 0 0.5em;">
+            &#x26ab; Merge local and remote breakpoints
+            <br>&#x26aa; Reset breakpoints on remote
+            <br>&#x26aa; None
+          </div>
+
+          <div style="height: 0.7em;"></div>
+          Source look-up method
+          <table>
+            <tr>
+              <td style="padding-left: 0.5em; padding-right: 2em;">&#x26aa; Exact match</td>
+              <td>Full script names are used.</td>
+            </tr>
+            <tr>
+              <td style="padding-left: 0.5em;">&#x26ab; Auto-detect</td>
+              <td>Only short file names are used.</td>
+            </tr>
+          </table>
+
+          <div style="height: 2em;"></div>
+          <div class="buttonarea">
+            <div class="button">Apply</div>
+            <div class="button">Revert</div>
+          </div>
+        </td>
+      </tr>
+    </table>
+
+  </div>
+  <div style="height: 0.6em;"></div>
+  <div class="buttonarea">
+    <div class="button">Debug</div>
+    <div class="button">Close</div>
+  </div>
+</div>
+
+
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+<br>
+
+<div class="dialogwindow">
+  <div class="dialogtitle">
+    Properties for utils.js
+  </div>
+  <div  style="width: 16em;"></div>
+
+  <div class="windowbody">
+    <table style="width: 100%">
+      <tr>
+        <td style="border-right: solid thin; vertical-align: top; padding-right: 0.6em;">
+          <li>Resource</li>
+          <li>Run/Debug Settings</li>
+          <li>
+            <div style="display: inline; border-style: dashed; border-width: thin;">
+              V8 JS Script&nbsp;
+            </div>
+          </li>
+        </td>
+        <td style="vertical-align: top; padding-left: 0.1em;">
+          <div style="padding-left: 0.2em; padding-top: 0.1em;">
+            V8 JS Script
+          </div>
+          <div style="vertical-align: top; padding-left: 0.3em; border-top: solid thin; padding-top: 0.3em">
+            <div style="height: 0.7em;"></div>
+            <table>
+              <tr><td colspan=2>Workspace file is currently linked to scripts in debug launches:
+                <div style="height: 0.2em;"></div>
+                <div style="display: block;" class="inputfield">
+                  <div style="display: inline; float: right;">&#11015;</div>chrome 9222 mysite
+                </div>
+              </td></tr>
+              <tr>
+                <td style="padding-left: 0.5em">Script name:</td><td>http://localhost:8080/misc/utils.js</td>
+              </tr>
+              <tr>
+                <td style="padding-left: 0.5em">Name under virtual project:&nbsp;</td><td>utils.js</td>
+              </tr>
+            </table>
+            
+            <div style="height: 1.5em;"></div>
+            
+            Auto-detect look-up mode parameters<br>
+            <div style="height: 0.2em;"></div>
+            <div style="padding-left: 0.4em">
+              Use more or less file path components:
+              <div class="button">&lt;Less</div>
+              <div class="button">More&gt;</div>
+              <div style="height: 0.1em;"></div>
+              misc/<b>utils.js</b>
+            </div>
+          <div>
+          <div style="height: 3em;"></div>
+          <div class="buttonarea">
+            <div class="button">Restore Defaults</div>
+            <div class="button">Apply</div>
+          </div>
+        </td>
+      </tr>
+    </table>
+
+  </div>
+  <div style="height: 0.6em;"></div>
+  <div class="buttonarea">
+    <div class="button">OK</div>
+    <div class="button">Cancel</div>
+  </div>
+</div>
+
+<br>&nbsp;
+<br>&nbsp;
+<br>&nbsp;
+<br>
 
 </body>
 </html>
